@@ -578,6 +578,7 @@ All:
 
 - Fix wxSocket::WaitForAccept() in non-main thread (Hajo Kirchhoff).
 - Fix memory overallocation in wxVector::reserve() (Nigel Paton).
+- Fix the build under HP-UX (tested under 11.31).
 
 All (GUI):
 
